[package]
name = "httpkv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = {version = "0.7.5", features = ["http2"]}
axum-extra = {version = "0.9.3", features = ["query"]}
serde = {version = "1.0.203", features = ["derive"]}
thiserror = "1.0.61"
tokio = {version="1.38.0", features = ["full"]}
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = {version = "0.3.18", features = ["json", "registry"]}
validator = {version = "0.18.1", features = ["derive"]}
